Add entity filter

--- a/translations/SherlockodeCrud.en.yml
+++ b/translations/SherlockodeCrud.en.yml
@@ -7,6 +7,7 @@ sherlockode_crud:
         yes: Yes
         no: No
     filter:
+        all: All
         perform: Search
         reset: Reset filters
         value: Value
