Improve filter translation, allow user to set custom label

--- a/translations/SherlockodeCrud.en.yml
+++ b/translations/SherlockodeCrud.en.yml
@@ -11,6 +11,7 @@ sherlockode_crud:
         all: All
         perform: Search
         reset: Reset filters
+        string_condition: Condition
         value: Value
         contains: Contains
         not_contains: Not contains
