Add default bundle style + improve ux

--- a/translations/SherlockodeCrud.en.yml
+++ b/translations/SherlockodeCrud.en.yml
@@ -4,6 +4,8 @@ sherlockode_crud:
     delete: Delete
     save: Save
     actions: Actions
+    back: Back
+    create: Create
     boolean:
         yes: Yes
         no: No
